# qc_ml

./: README.md
quantum-computing-project/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.py
quantum-computing-project/.github/workflows/: ci.yml
quantum-computing-project/notebooks/: getting_started.ipynb
quantum-computing-project/src/: cli.py
quantum-computing-project/src/algorithms/: __init__.py  vqe.py
quantum-computing-project/src/applications/qml/: __init__.py  quantum_classifier.py
quantum-computing-project/src/backends/: __init__.py  backend_interface.py  backend_manager.py
quantum-computing-project/src/circuits/: __init__.py  circuit_builder.py  circuit_templates.py
quantum-computing-project/tests/unit/: test_backends.py  test_circuits.py
